--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.2.1"
+    "@reduxjs/toolkit": "^2.6.1",
+    "lit": "^3.2.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "~5.7.2",
